# serialink

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: example.toml
docs/: BINARY_PROTOCOL.md  CI_CD.md  CONFIGURATION.md  HTTP_API.md  MCP_INTEGRATION.md  multi-device-orchestration-design.md
examples/: custom_protocol.toml  harness_smoke.toml  modbus_rtu.toml
src/: config.rs  exit_codes.rs  lib.rs  main.rs
src/harness/: dag.rs  executor.rs  mod.rs  schema.rs
src/interface/: cli.rs  http.rs  mcp.rs  mod.rs
src/pipeline/: engine.rs  mod.rs  transform.rs
src/pipeline/transforms/: line_buffer.rs  log_level.rs  mod.rs  regex_filter.rs  timestamp.rs
src/protocol/: checksum.rs  format.rs  frame_parser.rs  frame_strategy.rs  mod.rs  modbus.rs  presets.rs  types.rs
src/serial/: discovery.rs  manager.rs  mod.rs  port.rs  read_strategy.rs
tests/: harness_e2e_test.rs  harness_executor_test.rs  http_api_test.rs  pipeline_transforms.rs
web/: index.html
