[package]
name = "serialink"
version = "0.2.0"
edition = "2021"
description = "Structured serial port tool for automation, CI/CD, and AI agents"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Wisdoverse/serialink"
homepage = "https://github.com/Wisdoverse/serialink"
keywords = ["serial", "uart", "mcp", "ai-agent", "hardware-in-the-loop"]
categories = ["command-line-utilities", "development-tools", "hardware-support"]
rust-version = "1.75"

[dependencies]
serialport = { version = "4", default-features = false }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws"] }
rmcp = { version = "0.1", features = ["server", "transport-io", "transport-sse-server"] }
schemars = "0.8"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tower-http = { version = "0.6", features = ["cors"] }
crc = "3"
base64 = "0.22"
bytes = "1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
